# EmacsStuff

./: .emacs.desktop  .gitignore  .smex-items  README.md  TAGS  abbrev_defs  bookmarks  crazystuff.el  emacsreg.reg  ido.last  ido.last~  init.el  init.el~  network-security.data  places  recentf
.sx/: auth.el  filter.el  hidden-questions.el  network-user.el  read-questions.el  site-list.el
auto-save-list/: .saves-1172-TOSHIBA-LAPTOP~  .saves-1492-TOSHIBA-LAPTOP~  .saves-1664-TOSHIBA-LAPTOP~  .saves-1688-TOSHIBA-LAPTOP~  .saves-1844-TOSHIBA-LAPTOP~  .saves-2868-TOSHIBA-LAPTOP~  .saves-3184-TOSHIBA-LAPTOP~  .saves-3440-TOSHIBA-LAPTOP~  .saves-3528-TOSHIBA-LAPTOP~  .saves-3800-TOSHIBA-LAPTOP~  .saves-4168-TOSHIBA-LAPTOP~  .saves-4388-TOSHIBA-LAPTOP~  .saves-4640-TOSHIBA-LAPTOP~  .saves-4848-TOSHIBA-LAPTOP~  .saves-5012-TOSHIBA-LAPTOP~  .saves-5536-TOSHIBA-LAPTOP~  .saves-7276-TOSHIBA-LAPTOP~
backups/: !Users!trisdan!.emacs.d!ido.last~  !Users!trisdan!.emacs.d!recentf~  !Users!trisdan!Dropbox!Writing!Blogs!TPCS!siena_blog.org~  !drive_c!Users!trisdan!.bash_profile~  !drive_c!Users!trisdan!.emacs.d!elpa!ascii-3.1!ascii-autoloads.el~  !drive_c!Users!trisdan!.emacs.d!elpa!bubbleberry-theme-0.1.2!bubbleberry-theme-autoloads.el~  !drive_c!Users!trisdan!.emacs.d!elpa!clojure-test-mode-3.0.0!clojure-test-mode-autoloads.el~  !drive_c!Users!trisdan!.emacs.d!init.el~  (+617 more)
rust-playground/at-2018-11-10-104027/: Cargo.toml
rust-playground/at-2018-11-10-104027/src/: main.rs
rust-playground/at-2018-11-10-111937/: Cargo.toml
rust-playground/at-2018-11-10-111937/src/: main.rs
(+245 files in other folders)
