// snippet of code @ 2018-11-10 11:19:37

// === Rust Playground ===
// This snippet is in: ~/.emacs.d/rust-playground/at-2018-11-10-111937/

// Execute the snippet: C-c C-c
// Delete the snippet completely: C-c k
// Toggle between main.rs and Cargo.toml: C-c b

[package]
name = "foo"
version = "0.1.0"
authors = ["Rust Example <rust-snippet@example.com>"]

[dependencies]